# OtCAD

./: .gitignore
OtCAD/: Cargo.toml
OtCAD/src/: document.rs  draw_menu.rs  editor.rs  file_menu.rs  main.rs  picts.rs  top_panel.rs
application/: Cargo.toml
application/src/: callback.rs  clipboard.rs  draw_context.rs  font.rs  gui.rs  image.rs  job_system.rs  keys.rs  lib.rs
application/src/gui/: gui_components.rs  mod.rs
curves/: Cargo.toml
curves/src/: curves.rs  distortion.rs  lib.rs  points.rs  render.rs  solver.rs
gui_test/: Cargo.toml
gui_test/src/: bottom_panel.rs  cells.rs  config.rs  document.rs  draw_menu.rs  edit_menu.rs  editor.rs  file_menu.rs  group_menu.rs  gui_helper.rs  main.rs  options_menu.rs  picts.rs  top_panel.rs  transform_menu.rs
locc/: Cargo.toml
locc/src/: lib.rs  points.rs  render.rs  solver.rs
window/: Cargo.toml
window/src/: clipboard.rs  dib_section.rs  errors.rs  font_loader.rs  lib.rs  resources.rs  wide_strings.rs
