[package]
name = "curves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.4"
application = {path = "../application"}
serde = {version="1.0.117", features = ["derive"]}
serde_json = "1.0.59"