[package]
name = "gui_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
window = {path = "../window"}
application = {path = "../application"}
curves = {path = "../curves"}
directories = "4.0.1"
rand = "0.8.4"
serde = {version="1.0.117", features = ["derive"]}
serde_json = "1.0.59"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'
