[package]
name = "window"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.64"
utf16string = "0.2.0"
winapi = {version = "0.3.9", features=["winuser", "libloaderapi", "errhandlingapi", "winbase"]}
application = {path = "../application"}
