[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.64"
utf16string = "0.2.0"
winapi = {version = "0.3.9", features=["dwmapi", "errhandlingapi", "libloaderapi", "winbase", "winuser"]}
application = {path = "../application"}
serde = {version="1.0.117", features = ["derive"]}
serde_json = "1.0.59"
